# libmath

./: .gitignore  CMakeLists.txt
include/: libmath.h
src/: libmath.cpp
